2014-06-13  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/session.c (forget_node): Don't forget the last node in the
	history.
	* info/t/last-no-history.sh: New test.

	* info/info.c (add_initial_nodes): For split files, store the name of
	the top-level file instead of the subfile.
	* info/t/split-file-menu.sh: New test.

	* info/info.c (allfiles_create_node): Set filename to an empty string
	so that "*no file*" won't be shown in window mode line.  Surround node
	name with asterisks.

2014-06-12  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/info.h, info/makedoc.c, info/doc.h, info/infomap.c,
	info/infodoc.c: [NAMED_FUNCTIONS]: Made unconditional.
	* info/infodoc.c (default_emacs_like_ea_keys): Commented out entry for
	"M-x" removed.
	* info/footnotes.c (make_footnotes_node): Disabled code removed.
	* info/session.c (info_next_window, info_prev_window): Don't include
	echo area in window loop.

2014-06-11  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/session.c (info_follow_menus): Return value changed.  All
	callers updated.
	* info/nodes.c (info_get_node_with_defaults)
	(get_filename_and_nodename): Use a NODE instead of a WINDOW to give
	the defaults.
	* info/menu-sequence.sh: New test.
	* info/dir-menus-sloppily.sh: Sequence of menu labels corrected.

2014-06-11  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/info-utils.c (info_parse_node): Don't parse line number part of
	menus.  Return value and arguments changed.  All callers updated.
	(info_parsed_line_number): Removed.
	(scan_reference_target): Parse line number part of menus.

	* info/info-utils.h (PARSE_NODE_DFLT, PARSE_NODE_SKIP_NEWLINES)
	(PARSE_NODE_VERBATIM, PARSE_NODE_START): Removed.
	* info/nodes.c (info_get_node, info_get_node_with_defaults)
	(get_filename_and_nodename): Arguments changed.  All
	callers updated.

2014-06-11  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/info-utils.c (save_conversion_state, reset_conversion): New
	functions.
	(scan_node_contents): Call them.